--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ google-generativeai
 python-dotenv
 langchain
 PyPDF2
-chromadb
+chromadb>0.3.29
 langchain_google_genai
 fpdf2
 langchain-community
 sqlite3>=3.35.0
+python
